GERONIMODEVTOOLS-543 Augment the vm arguments used to start the Geronimo server when running under Eclipse
git-svn-id: https://svn.apache.org/repos/asf/geronimo/devtools/eclipse-plugin/branches/2.1.4@733586 13f79535-47bb-0310-9956-ffa450edef68